# MLFCrafter

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  README.md  example.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: bump-version.yml  create-release.yml  docs.yml  publish-pypi.yml  publish.yml  pypi-publish.yml  release-notes.yml  release.yml  ruff-check.yml  test.yml
docs/: gen_ref_pages.py  index.md
docs/api/: flowchain.md  mlfchain.md  utilities.md
docs/api/crafters/: categorical-crafter.md  cleaner-crafter.md  data-ingest-crafter.md  deploy-crafter.md  model-crafter.md  scaler-crafter.md  scorer-crafter.md
docs/examples/: basic-usage.md
docs/getting-started/: first-pipeline.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/user-guide/: data-processing.md  deployment.md  logging.md  model-training.md  pipeline-basics.md
flowcraft/: __init__.py  flow_chain.py  utils.py
flowcraft/crafters/: __init__.py  cleaner_crafter.py  data_ingest_crafter.py  deploy_crafter.py  model_crafter.py  scaler_crafter.py  scorer_crafter.py
mlfcrafter/: __init__.py
mlfcrafter/crafters/: __init__.py  categorical_crafter.py
scripts/: get_version.sh
tests/: __init__.py  test_flowcraft.py  test_logging.py  test_mlfcrafter.py
