[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowcraft"
version = "0.1.0"
description = "ML Pipeline Automation Made Simple - Chain together data processing, model training, and deployment with minimal code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Burak Civelek", email = "burakcivelekk61@gmail.com"}
]
maintainers = [
    {name = "Burak Civelek", email = "burakcivelekk61@gmail.com"}
]
keywords = [
    "machine-learning", 
    "pipeline", 
    "automation", 
    "data-science", 
    "ml-ops",
    "automl",
    "scikit-learn",
    "data-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Scientists",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/brkcvlk/flowcraft"
Repository = "https://github.com/brkcvlk/flowcraft"
"Bug Tracker" = "https://github.com/brkcvlk/flowcraft/issues"







 